# dalek

./: .gitignore  Cargo.toml  README.md
examples/: alloc.rs
src/: block.rs  bookkeeper.rs  breaks.rs  brk.rs  lib.rs  mmap.rs  pointer.rs  semaphore.rs  util.rs  win_mmap.rs
src/ledger/: block.rs  bookkeeper.rs  chunk.rs  mod.rs  raw_slice.rs
src/sc/: mod.rs  sys_num.rs
src/tree/: mod.rs
tests/: alloc.rs
