[package]
name = "dalek"
version = "0.1.0"
authors = ["Devin Ragotzy <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target."cfg(unix)".dependencies.libc]
version =  "0.2.79"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = ["basetsd", "handleapi", "memoryapi", "minwindef", "std", "sysinfoapi"]

[[bench]]
name = "alloc"
path = "tests/alloc.rs"